--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Daniel Casper",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.12.0"
+    "hapi": "^8.2.0"
   },
     "engines": {
     "node": "0.10.x"
