--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/dc1014/daniel-site"
@@ -18,9 +17,13 @@
   "author": "Daniel Casper",
   "license": "MIT",
   "dependencies": {
-    "hapi": "^8.2.0"
+    "body-parser": "~1.9.3",
+    "good": "^5.1.2",
+    "good-console": "^4.1.0",
+    "hapi": "^8.2.0",
+    "morgan": "~1.5.0"
   },
-    "engines": {
+  "engines": {
     "node": "0.10.x"
   },
   "devDependencies": {
