--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "daniel-site",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "My site",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "node server.js",
+    "ci": "npm install && npm test"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,24 @@
     "good-console": "^4.1.0",
     "hapi": "^8.2.0",
     "hapi-require-https": "^2.0.0",
-    "morgan": "~1.5.0"
+    "morgan": "~1.5.0",
+    "react": "^0.12.2",
+    "browserify": "^8.1.1",
+    "bower": "^1.3.12"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "^0.10"
   },
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "jest-cli": "^0.1.18",
+    "react-tools": "^0.11.1",
+    "gulp": "^3.8.11",
+    "gulp-jshint": "^1.9.2",
+    "gulp-react": "^2.0.0",
+    "gulp-watch": "^4.1.1",
+    "gulp-cache": "^0.2.8",
+    "gulp-cli": "^0.1.5",
+    "reactify": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0"
   }
 }
