--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "~1.5.0",
     "react": "^0.12.2",
     "browserify": "^8.1.1",
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "literalify": "^0.3.0"
   },
   "engines": {
     "node": "^0.10"
