--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "node": "^0.10"
   },
   "devDependencies": {
-    "jest-cli": "^0.1.18",
-    "react-tools": "^0.11.1",
     "gulp": "^3.8.11",
-    "gulp-jshint": "^1.9.2",
-    "gulp-react": "^2.0.0",
-    "gulp-watch": "^4.1.1",
     "gulp-cache": "^0.2.8",
     "gulp-cli": "^0.1.5",
+    "gulp-jshint": "^1.9.2",
+    "gulp-react": "^2.0.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-watch": "^4.1.1",
+    "jest-cli": "^0.1.18",
+    "node-bourbon": "^1.2.3",
+    "node-neat": "^1.4.2",
+    "react-tools": "^0.11.1",
     "reactify": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   }
