--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "~1.9.3",
+    "bower": "^1.3.12",
+    "browserify": "^8.1.1",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
     "hapi": "^8.2.0",
     "hapi-require-https": "^2.0.0",
+    "katex": "^0.2.0",
+    "literalify": "^0.3.0",
     "morgan": "~1.5.0",
-    "react": "^0.12.2",
-    "browserify": "^8.1.1",
-    "bower": "^1.3.12",
-    "literalify": "^0.3.0"
+    "react": "^0.12.2"
   },
   "engines": {
     "node": "^0.10"
